--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-router/node": "^7.1.5",
     "@react-router/serve": "^7.1.5",
     "isbot": "^5.1.17",
+    "lottie-react": "^2.4.1",
+    "motion": "^12.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5"
